# botui

./: AI_IMPLEMENTATION_PROMPT.md  Cargo.toml  IMPLEMENTATION_PLAN.md  PROMPT.md  README.md  TASKS.md  TODO.md  askama.toml  build.rs  html3.html  tauri.conf.json
.forgejo/workflows/: botui.yaml
.github/workflows/: ci.yml
src/: http_client.rs  lib.rs  main.rs
src/desktop/: drive.rs  mod.rs  tray.rs
src/shared/: mod.rs  state.rs
src/ui_server/: mod.rs
src/web/: health_handlers.rs  mod.rs
ui/embedded/: index.html
ui/minimal/: index.html
ui/suite/: base-layout-preview.html  base-layout.html  base-layout.js  base.html  chat.html  default.gbui  designer.html  designer.js  desktop.html  editor.html  editor.js  home.html  index.html  mail.html  meet.html  settings.html  single.gbui  tasks.html
ui/suite/admin/: admin-dashboard.html  admin-functions.js  admin.css  dns.html  groups.html  index.html  onboarding.html  users.html
ui/suite/analytics/: analytics.html  analytics.js
ui/suite/attendant/: attendant.css  attendant.js  index.html
ui/suite/auth/: auth.js  bootstrap.html  login.html  register.html
ui/suite/billing/: billing.html
ui/suite/calendar/: calendar.css  calendar.html
ui/suite/campaigns/: campaigns.html
ui/suite/canvas/: canvas.html  canvas.js
ui/suite/chat/: chat.css  chat.html  chat.js  projector.html
ui/suite/crm/: crm.css  crm.html
ui/suite/crm/partials/: lead-form.html
ui/suite/css/: ai-panel.css  app.css  apps-extended.css  base.css  chat-agent-mode.css  components.css  desktop.css  global.css  home.css  partials.css  theme-sentient.css
ui/suite/dashboards/: dashboards.html
ui/suite/docs/: docs.css  docs.html  docs.js
ui/suite/drive/: drive.css  drive.html  drive.js  index.html
ui/suite/forms/: forms.html
ui/suite/js/: auth-service.js  base.js  error-reporter.js  home.js  htmx-app.js  i18n.js  security-bootstrap.js  suite_app.js  terminal.js  theme-manager.js  window-manager.js
ui/suite/learn/: learn.html  learn.js
ui/suite/mail/: mail.css  mail.html  mail.js
ui/suite/meet/: meet.css  meet.html
ui/suite/monitoring/: alerts.html  alerts.js  health.css  health.html  home-dashboard.html  index.html  logs.css  logs.html  logs.js  metrics.css  metrics.html  monitoring.html  monitoring.js  resources.css  resources.html  services.html
ui/suite/paper/: paper.html  paper.js
ui/suite/partials/: chat.html  desktop-inner.html  editor-inner.html  editor.html  message.html  minibar.html  vibe.html
ui/suite/people/: people.html
ui/suite/player/: player.html
ui/suite/products/: products.html
ui/suite/public/themes/: 3dbevel.css  arcadeflash.css  cyberpunk.css  discofever.css  grungeera.css  jazzage.css  mellowgold.css  midcenturymod.css  orange.css  polaroidmemories.css  retrowave.css  saturdaycartoons.css  seasidepostcard.css  typewriter.css  vapordream.css  xeroxui.css  xtreegold.css  y2kglow.css
ui/suite/research/: research.css  research.html  research.js
ui/suite/settings/: index.html  organizations.html  settings.css  settings.js
ui/suite/sheet/: sheet.css  sheet.html  sheet.js
ui/suite/slides/: slides.css  slides.html  slides.js
ui/suite/social/: social.css  social.html
ui/suite/sources/: accounts.html  index.html  sources.css  sources.js
ui/suite/tasks/: autotask-scoped.css  autotask.css  autotask.html  autotask.js  intents.html  progress-panel.js  task-window.css  taskmd.css  tasks-scoped.css  tasks.css  tasks.html  tasks.js
ui/suite/tickets/: tickets.html
ui/suite/tools/: compliance.html  security.html  tools.js
ui/suite/vibe/: agents-sidebar.css
ui/suite/video/: video.js
ui/suite/workspace/: workspace.html
