[package]
name = "botui"
version = "6.1.0"
edition = "2021"
description = "General Bots UI - Pure web interface"
license = "AGPL-3.0"

[dependencies.botlib]
path = "../botlib"
features = ["http-client"]

[features]
default = ["ui-server"]
ui-server = []

[dependencies]
anyhow = "1.0"
askama = "0.12"
askama_axum = "0.4"
async-trait = "0.1"
axum = { version = "0.7.5", features = ["ws", "multipart", "macros"] }
base64 = "0.22"
bytes = "1.8"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.1", features = ["sqlite"] }
dirs = "5.0"
env_logger = "0.11"
futures = "0.3"
futures-util = "0.3"
hostname = "0.4"
jsonwebtoken = "9.3"
local-ip-address = "0.6.5"
log = "0.4"
mime_guess = "2.0"
rand = "0.8"
regex = "1.10"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = "0.3"
tokio = { version = "1.41", features = ["full"] }
tokio-stream = "0.1"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
tower-cookies = "0.10"
tracing = "0.1"
urlencoding = "2.1"
uuid = { version = "1.11", features = ["serde", "v4"] }
webbrowser = "0.8"
